--- a/config/mysql/mysql_info.properties
+++ b/config/mysql/mysql_info.properties
@@ -1,4 +1,4 @@
-BASE_PATH=/Users/mk-am16-060/Documents/ZZ.Eclipse_Workspace/ISMS_ExtractData
-SQL_FILE=/Users/mk-am16-060/Documents/ZZ.Eclipse_Workspace/ISMS_ExtractData/config/mysql/mysql_check_sql.xml
-DB_LIST=/Users/mk-am16-060/Documents/ZZ.Eclipse_Workspace/ISMS_ExtractData/config/mysql/mysql_rds_list.csv
+BASE_PATH=패스/ISMS_ExtractData
+SQL_FILE=패스/config/mysql/mysql_check_sql.xml
+DB_LIST=패스/config/mysql/mysql_rds_list.csv
 JDBC_CLASS=com.mysql.cj.jdbc.Driver
